--- a/app/src/main/res/layout/item_add_news_row.xml
+++ b/app/src/main/res/layout/item_add_news_row.xml
@@ -19,8 +19,10 @@
             android:id="@+id/ivNews"
             android:layout_width="250dp"
             android:layout_height="@dimen/margin150"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/img_girlres_background" />
+
+
     </androidx.cardview.widget.CardView>
 
     <TextView
