--- a/app/src/main/res/layout/item_add_news_row.xml
+++ b/app/src/main/res/layout/item_add_news_row.xml
@@ -20,7 +20,9 @@
             android:layout_width="250dp"
             android:layout_height="@dimen/margin150"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_girlres_background" />
+            android:src="@drawable/img_girlres_background"
+
+            />
 
 
     </androidx.cardview.widget.CardView>
